# test-action

./: CMakeLists.txt  resources.qrc
.github/workflows/: build-windows.yml
